--- a/Configure/R1.cfg
+++ b/Configure/R1.cfg
@@ -10,6 +10,7 @@ ip address 172.1.0.1 255.255.255.0
 ip address 100.1.0.1 255.255.255.0 secondary
 ip ospf hello-interval 5
 ip ospf dead-interval 40
+ip ospf cost 50
 no shutdown
 exit
 
@@ -18,6 +19,7 @@ ip address 172.2.0.1 255.255.255.0
 ip address 100.2.0.1 255.255.255.0 secondary
 ip ospf hello-interval 5
 ip ospf dead-interval 40
+ip ospf cost 25
 no shutdown
 exit
 
@@ -26,6 +28,7 @@ ip address 192.0.0.2 255.255.255.0
 mac-address aabb.ccdd.ee02
 ip ospf hello-interval 5
 ip ospf dead-interval 40
+ip ospf cost 25
 no shutdown
 exit
 
