--- a/Configure/R2.cfg
+++ b/Configure/R2.cfg
@@ -10,6 +10,7 @@ ip address 172.1.0.2 255.255.255.0
 ip address 100.1.0.2 255.255.255.0 secondary
 ip ospf hello-interval 5
 ip ospf dead-interval 40
+ip ospf cost 50
 no shutdown
 exit
 
@@ -18,6 +19,7 @@ ip address 172.3.0.1 255.255.255.0
 ip address 100.3.0.1 255.255.255.0 secondary
 ip ospf hello-interval 5
 ip ospf dead-interval 40
+ip ospf cost 25
 no shutdown
 exit
 
