--- a/router_configure/R3.cfg
+++ b/router_configure/R3.cfg
@@ -5,21 +5,21 @@ ip ospf dead-interval 40
 no shutdown
 exit
 
-interface Ethernet 1/0
+interface GigabitEthernet1/0
+ip address 172.3.0.1 255.255.255.0
+ip address 100.3.0.1 255.255.255.0 secondary
+ip ospf hello-interval 5
+ip ospf dead-interval 40
+ip ospf cost 50
+no shutdown
+exit
+
+interface GigabitEthernet2/0
 ip address 172.2.0.2 255.255.255.0
 ip address 100.2.0.2 255.255.255.0 secondary
 ip ospf hello-interval 5
 ip ospf dead-interval 40
-ip ospf cost 25
-no shutdown
-exit
-
-interface Ethernet 1/1
-ip address 172.3.0.2 255.255.255.0
-ip address 100.3.0.2 255.255.255.0 secondary
-ip ospf hello-interval 5
-ip ospf dead-interval 40
-ip ospf cost 25
+ip ospf cost 50
 no shutdown
 exit
 
